# GXU-Campus-Network-Manager

./: .gitignore  README.md  gxu-campus-network-manager.sh  pyproject.toml
src/: GXUCampusNetworkManager.py  cli.py  daemon.py
src/gxucnm/: autostart.py  cli.py  daemon.py  network.py
